# cub

./: .gitignore  CMakeLists.txt  Makefile  README.md  bmp.c  cub3d.h  draw.c  init.c  key_2.c  keys.c  main.c  map.cub  map1.cub  parser.h  parser_check_map.c  parser_check_map_stuff.c  parser_color_n_path.c  parser_find_spec.c  parser_init.c  parser_map.c  parser_utils.c  parser_utils_second.c  parsing_resolution.c  paser_utils_second.c  raycast_init.c  raycasting.c  sprites_init.c  sprites_utils.c  test.cub
get_next_line/: get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c
pics/: barrel.xpm  barrl.xpm  greystone.xpm  mossy.xpm  mouse.xpm  redbrick.xpm  wood.xpm
